# purelude

./: .editorconfig  CHANGELOG.md  Dockerfile  LICENSE  README  README.md  package.yaml  purelude.cabal  stack.yaml
.circleci/: config.yml
src/: Debug.hs  Purelude.hs
src/Purelude/: Base.hs  List.hs  Show.hs
