name:                purelude
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zypeh/purelude#readme
license:             BSD3
license-file:        LICENSE
author:              zypeh
maintainer:          zypeh.geek@gmail.com
copyright:           BSD3
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README

Source-Repository head
  type: git
  location: git@github.com:zypeh/purelude.git

library
  exposed-modules:
    Purelude

  default-extensions:
    OverloadedStrings

  ghc-options:
    -Wall

  hs-source-dirs:   src
  default-language: Haskell2010
