name:                purelude
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/zypeh/purelude#readme
license:             BSD3
license-file:        LICENSE
author:              zypeh
maintainer:          zypeh.geek@gmail.com
copyright:           BSD3
category:            Prelude
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md CHANGELOG.md

Source-Repository head
  type: git
  location: git@github.com:zypeh/purelude.git

library
  exposed-modules:
    Purelude
    Purelude.Base
    Purelude.List

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall
    -fwarn-implicit-prelude

  build-depends:
    base     >= 4.6  && <4.12,
    ghc-prim >= 0.3  && <0.6

  hs-source-dirs:   src
  default-language: Haskell2010
